--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     main title. It's a smaller font and the color is lower
                     contrast.
                 </p>
-                <button class="signup-button">Sign up</button>
+                <button class="hero-signup-button">Sign up</button>
             </div>
             <img class="hero-right" src="images/hero-image.jpg" alt=""/>
         </section>
@@ -65,6 +65,16 @@
                 All I know is that it looks nice.</p>
             <footer>- Thor, God of Thunder</footer>
         </blockquote>
+    </section>
+
+    <section class="sign-up-section">
+        <div class="sign-up-box">
+            <div class="content">
+                <h2>Call to action! It's time!</h2>
+                <p>Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <button class="bottom-signup-button">Sign up</button>
+        </div>
     </section>
     
 </body>
