Add footer section

--- a/index.html
+++ b/index.html
@@ -76,6 +76,10 @@
             <button class="bottom-signup-button">Sign up</button>
         </div>
     </section>
+
+    <footer class="copyright-section">
+        <p>Copyright &#169; The Odin Project 2021</p>
+    </footer>
     
 </body>
 </html>
